# Thesis_Esp32_industrial_controller

./: README.md
ESP32/: platformio.ini
ESP32/data/: script.js
ESP32/include/: globals.h
ESP32/src/: main.cpp
ESP32/src/common/: Dlinkedlist.h  defines.h.example  info.cpp
ESP32/src/connect/: TaskBLE.cpp  TaskMQTT.cpp  TaskServer.cpp  TaskWifi.cpp  connect_init.cpp  connect_init.h
ESP32/src/device/: TaskLed.cpp  TaskMobus.cpp  TaskTemperatureHumidity.cpp
ESP32/src/task/: TaskLoadHistory.cpp  TaskSchedule.cpp  TaskSchedule.h  TaskTime.cpp
LCD/: UI.html  custom.csv  huge_app.csv  platformio.ini
LCD/boards/: esp32_s3_lcd.json
LCD/data/: script.js
LCD/include/: globals.h
LCD/lib/: lv_conf.h
LCD/src/: main.cpp
LCD/src/device/: TaskMobus.cpp  TaskTempHumi.cpp  TaskTempHumi.h
LCD/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen2.c  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_sidebar.c  ui_comp_sidebar.h  ui_helpers.c  ui_img_aclab_img_1_png.c  ui_img_button_png.c  ui_img_download_1_png.c  ui_img_schedule_png.c
PlatformIO/: platformio.ini
PlatformIO/data/: script.js
PlatformIO/include/: globals.h
PlatformIO/lib/BLE_OTA/: IOT47_BL3_OTA.h
PlatformIO/src/: main.cpp  main.example
PlatformIO/src/common/: M5_init.cpp  defines.h.example  info.cpp  info.h
PlatformIO/src/connect/: TaskBLE.cpp  TaskBLE.h  TaskMQTT.cpp  TaskMQTT.h  TaskServer.cpp  (+4 more)
ZX4D30NE01S/: sdkconfig  sdkconfig.old
ZX4D30NE01S/main/: CMakeLists.txt  board.h  config.h  config.h.example  gui.c  gui.h  main.c  my_data.h  screen.c
(+36 files in other folders)
